--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -13,6 +13,28 @@ html {
   background-color       : #000;
   -webkit-font-smoothing : antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+
+  @media(min-width: 1400px) {
+    font-size: 12px;
+  }
+
+  @media(min-width: 1600px) {
+    font-size: 14px;
+  }
+
+  @media(min-width: 2100px) {
+    font-size: 18px;
+  }
+
+  @media(min-width: 3000px) {
+    font-size: 28px;
+  }
+
+  @media(min-width: 3500px) {
+    font-size: 33px;
+
+  }
 }
 
 code {
