--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -2,6 +2,13 @@
   margin    : 0;
   padding   : 0;
   box-sizing: border-box;
+  outline   : none;
+
+  :focus,
+  :active,
+  :enabled {
+    outline: none;
+  }
 }
 
 html {
