--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -4,9 +4,9 @@
   box-sizing: border-box;
   outline   : none;
 
-  :focus,
-  :active,
-  :enabled {
+  &:focus,
+  &:active,
+  &:enabled {
     outline: none;
   }
 }
