--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -14,7 +14,7 @@
 html {
   height                 : 100vh;
   width                  : 100vw;
-  overflow-x             : hidden;
+  overflow               : hidden;
   font-size              : 10px;
   font-family            : sans-serif;
   background-color       : #000;
@@ -46,4 +46,18 @@ html {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+video {
+  position: fixed;
+  bottom  : 0;
+  left    : 0;
+  right   : 0;
+  display : none;
+  height  : 40rem;
+  margin  : auto;
+
+  &.play {
+    display: unset;
+  }
 }
