--- a/src/styles/scss/bg.scss
+++ b/src/styles/scss/bg.scss
@@ -1,6 +1,6 @@
-@function addStar($star: "") {
+@function addStar($color, $star: "") {
   @for $i from 1 through 300 {
-    $star: $star + random(1000)*0.1vw + " "+ random(1000)*0.1vh + " "+ 0 + " "+ random(50)*-0.01rem + #cc7;
+    $star: $star + random(1000)*0.1vw + " "+ random(1000)*0.1vh + " "+ 0 + " "+ random(20)*-0.01rem + $color;
 
     @if $i < 300 {
       $star: $star + ",";
@@ -11,9 +11,9 @@
 }
 
 .layer1 {
-  width             : .35rem;
-  height            : .35rem;
-  box-shadow        : #{addStar()};
+  width             : .34rem;
+  height            : .34rem;
+  box-shadow        : #{addStar(#cc9)};
   animation-duration: 80s;
 }
 
@@ -24,7 +24,7 @@
 .layer2 {
   width             : .33rem;
   height            : .33rem;
-  box-shadow        : #{addStar()};
+  box-shadow        : #{addStar(#c9c)};
   animation-duration: 120s;
 }
 
@@ -35,7 +35,7 @@
 .layer3 {
   width             : 0.3rem;
   height            : 0.3rem;
-  box-shadow        : #{addStar()};
+  box-shadow        : #{addStar(#8df)};
   animation-duration: 140s;
 }
 
