--- a/src/styles/scss/bg.scss
+++ b/src/styles/scss/bg.scss
@@ -1,6 +1,17 @@
 @function addStar($color, $star: "") {
   @for $i from 1 through 300 {
-    $star: $star + random(1000)*0.1vw + " "+ random(1000)*0.1vh + " "+ 0 + " "+ random(20)*-0.01rem + $color;
+    $star: $star +
+      random(1000) *
+      0.1vw +
+      " " +
+      random(1000) *
+      0.1vh +
+      " "+
+      0 +
+      " " +
+      random(20) *
+      -0.01rem +
+      $color;
 
     @if $i < 300 {
       $star: $star + ",";
@@ -11,9 +22,9 @@
 }
 
 .layer1 {
-  width             : .34rem;
-  height            : .34rem;
-  box-shadow        : #{addStar(#cc9)};
+  width: 0.33rem;
+  height: 0.33rem;
+  box-shadow: #{addStar(#cc9)};
   animation-duration: 80s;
 }
 
@@ -22,9 +33,9 @@
 }
 
 .layer2 {
-  width             : .33rem;
-  height            : .33rem;
-  box-shadow        : #{addStar(#c9c)};
+  width: 0.32rem;
+  height: 0.32rem;
+  box-shadow: #{addStar(#9cf)};
   animation-duration: 120s;
 }
 
@@ -33,9 +44,9 @@
 }
 
 .layer3 {
-  width             : 0.3rem;
-  height            : 0.3rem;
-  box-shadow        : #{addStar(#8df)};
+  width: 0.3rem;
+  height: 0.3rem;
+  box-shadow: #{addStar(#8df)};
   animation-duration: 140s;
 }
 
