--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -21,26 +21,24 @@ html {
   -webkit-font-smoothing : antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-
-  @media(min-width: 1400px) {
+  @media (min-width: 1400px) {
     font-size: 12px;
   }
 
-  @media(min-width: 1600px) {
+  @media (min-width: 1600px) {
     font-size: 14px;
   }
 
-  @media(min-width: 2100px) {
+  @media (min-width: 2100px) {
     font-size: 18px;
   }
 
-  @media(min-width: 3000px) {
+  @media (min-width: 3000px) {
     font-size: 28px;
   }
 
-  @media(min-width: 3500px) {
+  @media (min-width: 3500px) {
     font-size: 33px;
-
   }
 }
 
@@ -51,13 +49,19 @@ code {
 video {
   position: fixed;
   bottom  : 0;
-  left    : 0;
+  left    : -10vw;
   right   : 0;
   display : none;
-  height  : 40rem;
+  width   : 110vw;
   margin  : auto;
 
   &.play {
     display: unset;
+  }
+}
+
+@media (max-width: 768px) {
+  video {
+    top: 0;
   }
 }
